--- a/kadai_008/kadai_008.html
+++ b/kadai_008/kadai_008.html
@@ -46,7 +46,7 @@
                     <label>その他</label>
                     <input type="radio" name="gender">
                     <br>
-                    <label>おすすめの和菓子の名称</label>
+                    <label>おすすめ和菓子の名称</label>
                     <input type="text" placeholder="例：みたらし団子">
                     <br>
                     <label>おすすめする理由</label>
@@ -74,4 +74,5 @@
         <p>&copy;SAMURAIニュース</p>
     </footer>
 </body>
+
 </html>
